refactor: sorting 메서드 수정
기존의 sorting 메서드는 새로운 리스트로 할당받지 않고 정렬을 실행하여 immutable한 경우 정렬 불가능한 예외가 발생했다.
new ArrayList<>()로 새로 할당받아 mutable한 객체 리스트로 생성하여 정렬하도록 수정하였습니다.